--- a/applets/brightness/plugin/CMakeLists.txt
+++ b/applets/brightness/plugin/CMakeLists.txt
@@ -3,8 +3,7 @@
 
 ecm_add_qml_module(brightnesscontrolplugin URI org.kde.plasma.private.brightnesscontrolplugin GENERATE_PLUGIN_SOURCE)
 target_sources(brightnesscontrolplugin PRIVATE
-    nightcolorinhibitor.cpp
-    nightcolormonitor.cpp
+    nightcolorcontroller.cpp
     screenbrightnesscontrol.cpp
     keyboardbrightnesscontrol.cpp
 )
