--- a/startkde/waitforname/CMakeLists.txt
+++ b/startkde/waitforname/CMakeLists.txt
@@ -5,7 +5,7 @@ set(plasma_waitforname_SRCS
     main.cpp
    )
 
-ecm_qt_declare_logging_category(plasma_waitforname_SRCS HEADER debug_p.h IDENTIFIER LOG_PLASMA CATEGORY_NAME org.kde.knotifications
+ecm_qt_declare_logging_category(plasma_waitforname_SRCS HEADER debug_p.h IDENTIFIER LOG_PLASMA CATEGORY_NAME org.kde.plasma.waitforname
     DESCRIPTION "plasma waitforname"
     EXPORT PLASMAWORKSPACE
 )
