--- a/startkde/systemd/CMakeLists.txt
+++ b/startkde/systemd/CMakeLists.txt
@@ -1,6 +1,6 @@
 ecm_install_configured_files(INPUT plasma-ksplash-ready.service.in @ONLY
                                                    DESTINATION ${KDE_INSTALL_SYSTEMDUSERUNITDIR})
-
+ecm_install_configured_files(INPUT plasma-sentinel.service.in @ONLY DESTINATION ${KDE_INSTALL_SYSTEMDUSERUNITDIR})
 install(FILES plasma-core.target DESTINATION ${KDE_INSTALL_SYSTEMDUSERUNITDIR})
 install(FILES plasma-workspace.target DESTINATION ${KDE_INSTALL_SYSTEMDUSERUNITDIR})
 install(FILES plasma-workspace-wayland.target DESTINATION ${KDE_INSTALL_SYSTEMDUSERUNITDIR})
